corrected static path

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/static/styles/styles.css" />
+    <link rel="stylesheet" href="./static/styles/styles.css" />
   </head>
   <body>
     <div class="row">
@@ -43,7 +43,7 @@
             <div class="carousel-item active">
               <img
                 class="d-block"
-                src="/static/imgs/hero1.jpg"
+                src="./static/imgs/hero1.jpg"
                 alt="First slide"
               />
               <div class="carousel-caption d-none d-md-block">
@@ -54,7 +54,7 @@
             <div class="carousel-item">
               <img
                 class="d-block"
-                src="/static/imgs/hero2.jpg"
+                src="./static/imgs/hero2.jpg"
                 alt="Second slide"
               />
               <div class="carousel-caption d-none d-md-block">
