Mobile View Css

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
           <div class="log_in">
             <form action="#" class="form-group">
-              <fieldset>
+              <fieldset class="login_section">
                 <legend>Log In</legend>
                 <p class="login_text">
                   Already registered on the new platform?
@@ -101,18 +101,18 @@
                     />
                   </div>
 
-                  <div class="row">
+                  <div class="row btn_div">
                     <input type="submit" value="Submit" class="btn" />
                   </div>
                 </div>
               </fieldset>
 
-              <fieldset>
+              <fieldset class="register_section">
                 <legend>Register</legend>
                 <div class="container register_content">
                   <div class="card text-left">
                     <div class="row">
-                      <div class="col-lg-2">
+                      <div class="col-lg-2 user_div">
                         <i class="far fa-user"></i>
                       </div>
                       <div class="col-lg-10">
