--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
           </div>
         </div>
       </div>
-      <div class="footer_bg"></div>
+      <div
+        class="footer_bg"
+        style="background-image: url('./static/imgs/footer_bg.png');"
+      ></div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
